// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoctorList matches snapshot with custom renderItem 1`] = `
[
  <View
    aria-label="Notifications (F8)"
    pointerEvents="box-none"
    role="region"
    style={
      {
        "bottom": 0,
        "flexDirection": "column",
        "left": 0,
        "maxWidth": "100%",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 100000,
      }
    }
    tabIndex={-1}
  >
    <View
      focusable={false}
      pointerEvents="box-none"
      style={
        {
          "flexDirection": "column",
          "maxWidth": "100%",
          "position": "absolute",
        }
      }
    />
  </View>,
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    collapsable={false}
    contentContainerStyle={
      {
        "paddingBottom": 8,
        "paddingHorizontal": 24,
      }
    }
    data={
      [
        {
          "avatar": {
            "id": 1,
            "url": "https://picsum.photos/id/91/3504/2336",
          },
          "bio": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
          "clinic": {
            "address": "123 Main St, Springfield, USA",
            "description": "A premier healthcare facility offering top-tier services in Springfield.",
            "doctors": [],
            "documentId": "123e4567-e89b-12d3-a456-426614174000",
            "id": 1,
            "image": {
              "alt": "Sunrise Hospital",
              "id": 1,
              "url": "https://picsum.photos/200",
            },
            "name": "Sunrise Hospital",
            "rating": 4.2,
            "reivewCouter": 300,
            "reviews": [],
            "type": "Clinic",
          },
          "dateOfBirth": 1980-01-01T00:00:00.000Z,
          "documentId": "doc_001",
          "email": "john.smith@example.com",
          "favoriteId": "fav_001",
          "gender": true,
          "id": 1,
          "name": "Dr. John Smith",
          "nickname": "jdoe",
          "rating": 4.8,
          "reviewCounter": 5,
          "reviews": [
            {
              "comment": "Dr. Patel is a true professional who genuinely cares about his patients. I highly recommend Dr. Patel to",
              "documentId": "doc-1",
              "id": 1,
              "rating": 5,
            },
            {
              "comment": "Dr. Patel is a true professional who genuinely cares about his patients. I highly recommend Dr. Patel to",
              "documentId": "doc-2",
              "id": 2,
              "image": {
                "testUri": "../../../assets/images/user01.png",
              },
              "name": "Emily Anderson",
              "rating": 5,
            },
            {
              "comment": "Dr. Patel is a true professional who genuinely cares about his patients. I highly recommend Dr. Patel to",
              "documentId": "doc-3",
              "id": 3,
              "image": {
                "testUri": "../../../assets/images/user01.png",
              },
              "name": "Emily Anderson",
              "rating": 5,
            },
            {
              "comment": "Dr. Patel is a true professional who genuinely cares about his patients. I highly recommend Dr. Patel to",
              "documentId": "doc-4",
              "id": 4,
              "image": {
                "testUri": "../../../assets/images/user01.png",
              },
              "name": "Emily Anderson",
              "rating": 5,
            },
          ],
          "specialty": {
            "description": "Specialized in heart-related conditions and treatments.",
            "doctors": [],
            "documentId": "123e4567-e89b-12d3-a456-426614174000",
            "id": 1,
            "name": "Cardiology",
          },
          "username": "jdoe",
          "users_permissions_user": {
            "avatar": {
              "id": 1,
              "url": "https://example.com/avatar.jpg",
            },
            "bio": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
            "dateOfBirth": 1990-01-01T00:00:00.000Z,
            "documentId": "123e4567-e89b-12d3-a456-426614174000",
            "email": "jdoe@example.com",
            "gender": true,
            "id": 1,
            "name": "John Doe",
            "nickname": "jdoe",
            "username": "jdoe",
          },
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    handlerTag={2}
    handlerType="NativeViewGestureHandler"
    initialNumToRender={20}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={0.0001}
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
    windowSize={5}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          testID="doctor-doc_001"
        >
          Dr. John Smith
        </View>
      </View>
    </View>
  </RCTScrollView>,
]
`;

exports[`DoctorList matches snapshot with empty data 1`] = `
[
  <View
    aria-label="Notifications (F8)"
    pointerEvents="box-none"
    role="region"
    style={
      {
        "bottom": 0,
        "flexDirection": "column",
        "left": 0,
        "maxWidth": "100%",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 100000,
      }
    }
    tabIndex={-1}
  >
    <View
      focusable={false}
      pointerEvents="box-none"
      style={
        {
          "flexDirection": "column",
          "maxWidth": "100%",
          "position": "absolute",
        }
      }
    />
  </View>,
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    collapsable={false}
    contentContainerStyle={
      {
        "paddingBottom": 8,
        "paddingHorizontal": 24,
      }
    }
    data={[]}
    getItem={[Function]}
    getItemCount={[Function]}
    handlerTag={1}
    handlerType="NativeViewGestureHandler"
    initialNumToRender={20}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={0.0001}
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
    windowSize={5}
  >
    <View />
  </RCTScrollView>,
]
`;
